Rix register doctor

--- a/frontend/src/app/admin/secretaries/secretaries.component.html
+++ b/frontend/src/app/admin/secretaries/secretaries.component.html
@@ -33,7 +33,7 @@
                             </div>
                             <ng-template #EmptyDoctor>
                                 <div class="alert alert-danger mt-2 text-center" role="alert">
-                                    Pas de docteur associée
+                                    Pas de docteur associé
                                 </div>
                             </ng-template>
                         </div>
