Fix secretaries hire/unhire

--- a/frontend/src/app/doctor/secretaries/secretaries.component.html
+++ b/frontend/src/app/doctor/secretaries/secretaries.component.html
@@ -3,6 +3,19 @@
         <input class="form-control" type="text" name="search" [(ngModel)]="searchSecretary" autocomplete="off" placeholder="Chercher une sécretaire . . .">
     </div>
     <!-- List all Secretaries -->
+    <div class="container" *ngIf='myDoctor.id_secrt != null'>
+        <hr>
+        <div class="row mb-4">
+            <div class="col-md-3 col-sm-6 item">
+                <div class="card item-card card-block" data-toggle="modal" data-target="#SecretaryModal" (click)="SecretaryInfo(myDoctor.id_secrt)">
+                    <img src="assets/secretaryy.png" alt="Photo of sunset">
+                    <h5 class="item-card-title mt-3 mb-3 text-center">{{myDoctor.id_secrt.nom | uppercase}} {{myDoctor.id_secrt.prenom | uppercase}}</h5>
+                </div>
+            </div>
+        </div>
+        <hr>
+    </div>
+  
     <div class="row">
         <div class="col-md-3 col-sm-6 item" *ngFor="let secretary of secretaries | filter:searchSecretary">
             <div class="card item-card card-block" data-toggle="modal" data-target="#SecretaryModal" (click)="SecretaryInfo(secretary)">
@@ -24,12 +37,12 @@
                                 <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<b>Email : </b>{{mySecretary.email}}</li>
                                 <li class="list-group-item" *ngIf='mySecretary.numtel'><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;<b>Numéro de téléphone : </b>{{mySecretary.numtel}}</li>
                             </ul>
-                            <div *ngIf='mySecretary.id_doctor != null; else EmptyDoctor'>
+                            <div *ngIf='myDoctor.id_secrt != null && (myDoctor.id_secrt._id === mySecretary._id ) ; else EmptyDoctor'>
                                 <div class="alert alert-info mt-2 text-center" role="alert">
                                     Docteur associée
                                 </div>
-                                <li class="list-group-item"><i class="fa fa fa-user" aria-hidden="true "></i>&nbsp;<b>Nom et prénom : </b>Dr.{{mySecretary.id_doctor.nom}} {{mySecretary.id_doctor.prenom}}</li>
-                                <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true "></i>&nbsp;<b>Email : </b>{{mySecretary.id_doctor.email}}</li>
+                                <li class="list-group-item"><i class="fa fa fa-user" aria-hidden="true "></i>&nbsp;<b>Nom et prénom : </b>Dr.{{myDoctor.nom}} {{myDoctor.prenom}}</li>
+                                <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true "></i>&nbsp;<b>Email : </b>{{myDoctor.email}}</li>
                             </div>
                             <ng-template #EmptyDoctor>
                                 <div class="alert alert-danger mt-2 text-center" role="alert">
@@ -38,8 +51,13 @@
                             </ng-template>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-outline-success" (click)='hire(mySecretary._id,doc_id)' data-dismiss="modal">Embaucher</button>
-                            <!-- <button type="button" class="btn btn-danger" (click)='deleteD(mySecretary._id)' data-dismiss="modal">Supprimer</button> -->
+                            <button type="button" class="btn btn-outline-success" (click)='hire(mySecretary._id,doc_id)' data-dismiss="modal" *ngIf='myDoctor.id_secrt == null'>Embaucher</button>
+                            <div *ngIf='myDoctor.id_secrt != null && (myDoctor.id_secrt._id != mySecretary._id )' class="text-center">
+                                <div class="text-danger">
+                                    Veuillez désembaucher votre sécretaire actuelle pour embaucher une autre 
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-outline-danger" (click)='unhire(mySecretary._id,doc_id)' data-dismiss="modal" *ngIf='myDoctor.id_secrt != null && (myDoctor.id_secrt._id === mySecretary._id )'>Désembaucher</button>
                         </div>
                     </div>
                 </div>
