--- a/frontend/src/app/doctor/layout/layout.component.html
+++ b/frontend/src/app/doctor/layout/layout.component.html
@@ -22,11 +22,92 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dr. {{doctor_name}}</a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/" (click)='logout()'>Log out</a>
+                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#UpdateDoctor"><i class="fa fa-cog"></i>  Profile</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/" (click)='logout()'><i class="fa fa-sign-out"></i> Déconnexion</a>
                         </div>
                     </li>
                 </ul>
             </div>
+            <!-- Register modal doctor  -->
+            <div class="modal fade" id="UpdateDoctor" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered text-left" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h4 class="modal-title w-100 font-weight-bold">Modifier votre compte</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <form #f4="ngForm" (ngSubmit)="onUpdateDoctor(f4)">
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label for="formGroupExampleInput1">Nom </label>
+                                <input type="text" class="form-control" id="formGroupExampleInput1" placeholder="" name="nom" [(ngModel)]="myDoctor.nom" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Prénom</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="" name="prenom"  [(ngModel)]="myDoctor.prenom" ngModel required>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" [(ngModel)]="myDoctor.email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Nouveau mot de passe</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" name="newPassword" ngModel required>
+                            </div>
+                            <hr>
+                            <div class="form-group mt-3">
+                                <label for="inputAddress2">Rue</label>
+                                <input type="text" class="form-control" id="inputAddress2" placeholder="" name="street" [(ngModel)]="myDoctor.adress.street" required>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-8">
+                                <label for="inputCity">Gouvernorat</label>
+                                <input type="text" class="form-control" id="inputCity"  name="city" [(ngModel)]="myDoctor.adress.city" required>
+                                </div>
+                                <div class="col-1"></div>
+                                <div class="form-group col-md-3">
+                                    <label for="inputZip">Code postal</label>
+                                    <input type="text" class="form-control" id="inputZip"  name="zip" [(ngModel)]="myDoctor.adress.zip" required>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="inputAddress2">Spécialité</label>
+                                <input type="text" class="form-control" id="inputAddress2" placeholder="" name="spec" [(ngModel)]="myDoctor.spec" required>
+                            </div>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="basic-addon1">Téléphone</span>
+                                </div>
+                                <input type="text" class="form-control" placeholder="+216 .. " aria-label="Username" aria-describedby="basic-addon1" name="numtel" [(ngModel)]="myDoctor.numtel" required> 
+                            </div>
+                            <hr>
+                            <div class="form-group mt-2">
+                                <label for="bio">Bio</label>
+                                <textarea class="form-control" id="bio" rows="3" name="bio" [(ngModel)]="myDoctor.bio" required></textarea>
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Mot de passe actuel</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" name="password" ngModel required>
+                                <small class="text-danger">Veuiller écrire votre mot de passe pour effectuer le changement</small>
+                            </div>
+
+                        </div>
+                        
+                        <div class="modal-footer text-center d-block">
+                            <button type="submit" class="btn btn-outline-dark">Modifier</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            </div>
+            <!-- Register modal doctor  -->
         </nav>
         <div class="container-fluid">
             <router-outlet></router-outlet>
