--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -30,8 +30,8 @@
                     <p class="card-text">Connecter vous en tant que sécretaire.</p>
                     <p class="card-text"><small class="text-muted"></small></p>
                     <div class="text-center">
-                        <button class="btn btn-info mt-4 btn-block" data-toggle="modal" data-target="#LoginAdmin">Connecter</button>
-                        <button class="btn btn-outline-info mt-4 btn-block" data-toggle="modal" data-target="#LoginAdmin">Inscrivez-vous</button>
+                        <button class="btn btn-info mt-4 btn-block" data-toggle="modal" data-target="#LoginSec">Connecter</button>
+                        <button class="btn btn-outline-info mt-4 btn-block" data-toggle="modal" data-target="#RegisterSec">Inscrivez-vous</button>
                     </div>
                 </div>
             </div>
@@ -175,12 +175,12 @@ aria-hidden="true">
                     </div>
                     <hr>
                     <div class="form-group">
-                        <label for="inputAddress2">Spécialité</label>
-                        <input type="text" class="form-control" id="inputAddress2" placeholder="" name="spec" ngModel required>
+                        <label for="">Spécialité</label>
+                        <input type="text" class="form-control" id="" placeholder="" name="spec" ngModel required>
                     </div>
                     <div class="input-group">
                         <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">Téléphone</span>
+                            <span class="input-group-text" id="-">Téléphone</span>
                         </div>
                         <input type="text" class="form-control" placeholder="+216 .. " aria-label="Username" aria-describedby="basic-addon1" name="numtel" ngModel required> 
                     </div>
@@ -199,3 +199,89 @@ aria-hidden="true">
     </div>
 </div>
 <!-- Register modal doctor  -->
+
+
+<!-- Login modal Secr  -->
+<div class="modal fade" id="LoginSec" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered text-left" role="document">
+        <div class="modal-content">
+        <div class="modal-header text-center">
+            <h4 class="modal-title w-100 font-weight-bold">CONNECTER VOUS <span class="text-info">[SECRETAIRE]</span></h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form #f4="ngForm" (ngSubmit)="onSubmitSec(f4)">
+                <div class="alert alert-danger text-center" role="alert" *ngIf='alertMessageDoctor != ""'>
+                    {{alertMessageDoctor}}
+                </div>
+                <div class="form-group">
+                    <label for="">Adresse email</label>
+                    <input type="email" class="form-control" id="" aria-describedby="emailHelp"
+                    placeholder="Taper votre adresse email" name="email" ngModel required>
+                    <small id="emailHelp" class="form-text text-muted">Vos coordonnées sont sécurisés.</small>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword3">Mot de passe</label>
+                    <input type="password" class="form-control" id="" placeholder="Taper votre mot de passe"
+                    name="password" ngModel required>
+                </div>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-dark">Se connecter</button>
+                </div>
+            </form>
+        </div>
+        
+        </div>
+    </div>
+</div>
+<!--  End Login modal Secr  -->
+
+<!-- Register modal Secr  -->
+<div class="modal fade" id="RegisterSec" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+  aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered text-left" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">INSCRIVEZ-VOUS <span class="text-info">[SERCRETAIRE]</span></h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form #f5="ngForm" (ngSubmit)="onSubmitSecRegister(f5)">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="formGroupExampleInput1">Nom </label>
+                        <input type="text" class="form-control" id="" placeholder="" name="nom" ngModel required>
+                    </div>
+                    <div class="form-group">
+                        <label for="formGroupExampleInput2">Prénom</label>
+                        <input type="text" class="form-control" id="" placeholder="" name="prenom" ngModel required>
+                    </div>
+                    <hr>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email</label>
+                        <input type="email" class="form-control" id="" aria-describedby="emailHelp" name="email" ngModel required>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Mot de passe</label>
+                        <input type="password" class="form-control" id="" name="password" ngModel required>
+                    </div>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="">Téléphone</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="+216 .. " aria-label="Username" aria-describedby="basic-addon1" name="numtel" ngModel required> 
+                    </div>
+                    <hr>
+                </div>
+                <div class="modal-footer text-center d-block">
+                    <button type="submit" class="btn btn-outline-dark">Créez votre compte</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<!-- Register modal Secr  -->
