--- a/frontend/src/app/secretary/home-sec/home-sec.component.html
+++ b/frontend/src/app/secretary/home-sec/home-sec.component.html
@@ -65,8 +65,12 @@
                         <input type="email" class="form-control" id="" aria-describedby="emailHelp" name="email"  [(ngModel)]="Secretary.email" required>
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Mot de passe</label>
+                        <label for="exampleInputPassword1">Ancien mot de passe</label>
                         <input type="password" class="form-control" id="" name="password" ngModel  required>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Mot de passe</label>
+                        <input type="password" class="form-control" id="" name="newPassword" ngModel  required>
                     </div>
                     <hr>
                     <div class="input-group">
