--- a/frontend/src/app/secretary/layout-sec/layout-sec.component.html
+++ b/frontend/src/app/secretary/layout-sec/layout-sec.component.html
@@ -3,7 +3,7 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="sidebar-heading">Secretaire</div>
         <div class="list-group list-group-flush">
-            <a routerLink="/secretary/home/{{myid}}"class="list-group-item list-group-item-action bg-light"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp; Dashboard</a>
+            <a routerLink="/secretary/home/{{myid}}"class="list-group-item list-group-item-action bg-light"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp; Acceuil</a>
             <button routerLink='/secretary/Rendezvous' *ngIf="Secretary.id_doctor != null"   class="list-group-item list-group-item-action bg-light"><i class="fa fa-user-md" aria-hidden="true"></i>&nbsp; Mes Rendez Vous</button>
             <button routerLink='/secretary/Rendezvous' *ngIf="Secretary.id_doctor == null" disabled  class="list-group-item list-group-item-action bg-light"><i class="fa fa-user-md" aria-hidden="true"></i>&nbsp; Mes Rendez Vous</button>
             
