--- a/frontend/src/app/doctor/secretaries/secretaries.component.html
+++ b/frontend/src/app/doctor/secretaries/secretaries.component.html
@@ -5,15 +5,45 @@
     <!-- List all Secretaries -->
     <div class="container" *ngIf='myDoctor.id_secrt != null'>
         <hr>
+        <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+            <strong>Ma sécretaire</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         <div class="row mb-4">
             <div class="col-md-3 col-sm-6 item">
-                <div class="card item-card card-block" data-toggle="modal" data-target="#SecretaryModal" (click)="SecretaryInfo(myDoctor.id_secrt)">
+                <div class="card item-card card-block" data-toggle="modal" data-target="#ActualSecretary" (click)="SecretaryInfo(myDoctor.id_secrt)">
                     <img src="assets/secretaryy.png" alt="Photo of sunset">
                     <h5 class="item-card-title mt-3 mb-3 text-center">{{myDoctor.id_secrt.nom | uppercase}} {{myDoctor.id_secrt.prenom | uppercase}}</h5>
                 </div>
             </div>
         </div>
         <hr>
+         <!-- Modal Secretary -->
+         <div class="modal fade" id="ActualSecretary" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle ">{{myDoctor.id_secrt.nom | uppercase}} {{myDoctor.id_secrt.nom | uppercase}}</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><i class="fa fa fa-envelope-o" aria-hidden="true"></i>&nbsp;<b>Email : </b>{{myDoctor.id_secrt.email}}</li>
+                            <li class="list-group-item" *ngIf='myDoctor.id_secrt.numtel'><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;<b>Numéro de téléphone : </b>{{myDoctor.id_secrt.numtel}}</li>
+                        </ul>
+    
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-danger" (click)='unhire(myDoctor.id_secrt._id,doc_id)' data-dismiss="modal">Désembaucher</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Modal Secretary -->
     </div>
   
     <div class="row">
@@ -67,7 +97,7 @@
     </div>
     <div class="jumbotron jumbotron-fluid mt-5" *ngIf="!secretaries?.length">
         <div class=" container ">
-            <h1 class="display-4 ">Vous n'avez pas de secretaires</h1>
+            <h1 class="display-4 ">Il n' y a pas de sécretaires pour le moments . . .</h1>
         </div>
     </div>
     <!-- End List all Secretaries -->
