--- a/frontend/src/app/doctor/secretaries/secretaries.component.html
+++ b/frontend/src/app/doctor/secretaries/secretaries.component.html
@@ -97,7 +97,7 @@
     </div>
     <div class="jumbotron jumbotron-fluid mt-5" *ngIf="!secretaries?.length">
         <div class=" container ">
-            <h1 class="display-4 ">Il n' y a pas de sécretaires pour le moments . . .</h1>
+            <h1 class="display-4 ">Il n' y a pas de sécretaires à embaucher pour le moments . . .</h1>
         </div>
     </div>
     <!-- End List all Secretaries -->
