--- a/frontend/src/app/doctor/consultations/consultations.component.html
+++ b/frontend/src/app/doctor/consultations/consultations.component.html
@@ -7,7 +7,7 @@
 <table class="table table-hover table-bordered">
     <thead class="thead-dark">
         <tr>
-            <th scope="col"></th>
+            <th scope="col" *ngIf='myConsultations?.length'></th>
             <th scope="col">Patient</th>
             <th class="col">Email</th>
             <th scope="col">Télephone</th>
