--- a/frontend/src/app/doctor/consultations/consultations.component.html
+++ b/frontend/src/app/doctor/consultations/consultations.component.html
@@ -19,18 +19,60 @@
     <tbody>
         <tr *ngFor='let consultation of myConsultations'>
             <th><button class="btn btn-info" (click)='archive(consultation._id)'>Archiver</button></th>
-            <th scope="row">{{consultation.id_patient.nom | uppercase }} {{consultation.id_patient.prenom | uppercase}}</th>
+            <th scope="row">{{consultation.id_patient.nom | uppercase }} {{consultation.id_patient.prenom | uppercase}}
+            </th>
             <td>{{consultation.id_patient.email }}</td>
             <td>{{consultation.id_patient.numtel }}</td>
             <td>{{consultation.createdAt| date : 'medium' : '':'fr' }}</td>
             <td>{{consultation.id_appointment.prix }} Dinars</td>
-            <td *ngIf="!consultation?.files?.length; else ExistFiles" class="text-center"><i class="fa fa-exclamation-triangle" style="font-size:30px;color:red"></i></td>
+            <td *ngIf="!consultation?.files?.length; else ExistFiles" class="text-center">
+                <!-- Button Add file -->
+                <div>
+                    <i class="fa fa-exclamation-triangle" style="font-size:30px;color:red"></i>
+                </div>
+                <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#Addfile" (click)="getConstId(consultation._id)">
+                    <i class="fa fa-plus-square-o"></i>
+                </button>
+            </td>
             <ng-template #ExistFiles>
-                <td class="text-center"><i class="fa fa-file-pdf-o" style="font-size:30px;"></i></td>
+                <td class="text-center">
+                    <div>
+                        <i class="fa fa-file-pdf-o" style="font-size:30px;"></i>
+                    </div>
+                    <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#Addfile" (click)="getConstId(consultation._id)">
+                        <i class="fa fa-plus-square-o"></i>
+                    </button>
+                </td>
             </ng-template>
         </tr>
     </tbody>
 </table>
 <div class="alert alert-info text-center mt-2" *ngIf='!myConsultations?.length'>
     Vous n'avez pas de consultations pour le moment.
+</div>
+
+<!-- Begin modal upload file -->
+<div class="modal fade" tabindex="-1" role="dialog" id="Addfile">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Ajouter une fichier</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form [formGroup] = "uploadForm" enctype="multipart/form-data" (ngSubmit)='onSubmit(id_const)'>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="exampleFormControlFile1">Votre fichier</label>
+                        <input type="file" class="form-control-file" id="exampleFormControlFile1" name="myfile"
+                        (change)="onFileSelected($event)">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-outline-dark">Ajouter</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
