--- a/frontend/src/app/doctor/archived-cons/archived-cons.component.html
+++ b/frontend/src/app/doctor/archived-cons/archived-cons.component.html
@@ -8,7 +8,7 @@
     <thead class="thead-dark">
         <tr>
             <th scope="col">Patient</th>
-            <th class="col">Email</th>
+            <th scope="col">Email</th>
             <th scope="col">Télephone</th>
             <th scope="col">Date</th>
             <th scope="col">Prix</th>
@@ -24,7 +24,11 @@
             <td>{{consultation.id_appointment.prix }} Dinars</td>
             <td *ngIf="!consultation?.files?.length; else ExistFiles" class="text-center"><i class="fa fa-exclamation-triangle" style="font-size:30px;color:red"></i></td>
             <ng-template #ExistFiles>
-                <td class="text-center"><i class="fa fa-file-pdf-o" style="font-size:30px;"></i></td>
+                <td class="text-center">
+                    <div *ngFor='let file of consultation.files'>
+                        <a href="http://localhost:4000/uploads/files/{{file.file}}" target="_blank"><i class="fa fa-file-pdf-o" style="font-size:30px;"></i></a>
+                    </div>
+                </td>
             </ng-template>
         </tr>
     </tbody>
