--- a/frontend/src/app/admin/doctors/doctors.component.html
+++ b/frontend/src/app/admin/doctors/doctors.component.html
@@ -12,7 +12,7 @@
         <div class="col-md-3 col-sm-6 item" *ngFor="let doctor of ad | filter:searchDoctor">
             <div class="card item-card card-block" data-toggle="modal" data-target="#DoctorModal" (click)="doctorInfo(doctor)">
                 <img src="assets/doctor-default.png" alt="Photo of sunset">
-                <h5 class="item-card-title mt-3 mb-3">Dr. {{doctor.nom}} {{doctor.prenom}}</h5>
+                <h5 class="item-card-title mt-3 mb-3">Dr. {{doctor.nom}} {{doctor.prenom}} <span *ngIf='!doctor.accepted' class="text-info">(Nouveau demande)</span></h5>
                 <p class="card-text">{{doctor.bio | slice:0:100}}{{ doctor.bio.length > 100 ? ' ...' : '' }}</p>
             </div>
             <!-- Modal Doctor BIO -->
@@ -55,6 +55,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
+                            <button type="button" class="btn btn-success" (click)='accept(doctor._id)' data-dismiss="modal" *ngIf='!mydoctor.accepted'>Accepter</button>
                             <button type="button" class="btn btn-danger" (click)='deleteD(doctor._id)' data-dismiss="modal">Supprimer</button>
                         </div>
                     </div>
@@ -62,155 +63,6 @@
             </div>
             <!-- End Modal Doctor BIO -->
         </div>
-        <!-- Modal Add Doctor -->
-        <!-- <div class="modal fade" id="AddDoctor" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate *ngIf="!modify; else elseBlock">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Ajouter docteur</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="border-light">
-                                <div class="card-body">
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Nom</label>
-                                    <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer nom docteur" name="nom" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Prénom</label>
-                                        <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer prénom docteur" name="prenom" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="sexe">Sexe:</label>
-                                        <select name="sexe" id="sexe" class="form-control" ngModel>
-                                          <option value="true">Homme</option>
-                                          <option value="false">Femme</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Spécialité</label>
-                                        <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer spécialité docteur" name="spec" ngModel>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">City</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enterer city docteur" name="city" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Street</label>
-                                        <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer street docteur" name="street" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">zip code</label>
-                                        <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer zip docteur" name="zip" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer email docteur" name="email" ngModel>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">Mot de passe</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" ngModel>
-                                    </div>
-                                     <div class="form-group" *ngIf="secretaries?.length">
-                                        <label for="secretaire">Selectionner secretaire:</label>
-                                        <select name="secretaire" id="secretaire" class="form-control" ngModel>
-                                          <option value="{{sec.id_user._id}}" *ngFor="let sec of secretaries">{{sec.id_user.nom}} {{sec.id_user.prenom}}</option>
-                                        </select>
-                                      </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">Bio</label>
-                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="bio" ngModel></textarea>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-success">Ajouter</button>
-                        </div>
-                    </form>
-                    <ng-template #elseBlock>
-                        <form #f="ngForm" (ngSubmit)="onUpdate(f,doctor)" novalidate>
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">Modifier docteur</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                              </button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="border-light">
-                                    <div class="card-body">
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Nom</label>
-                                            <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer nom docteur" name="nom" ngModel *ngIf="!modify; else elseBlock2">
-                                            <ng-template #elseBlock2>
-                                                <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer nom docteur" name="nom" [(ngModel)]="doctor.nom">
-                                            </ng-template>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Prénom</label>
-                                            <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer prénom docteur" name="prenom" [(ngModel)]="doctor.prenom">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="sexe">Sexe:</label>
-                                            <select name="sexe" id="sexe" class="form-control" [(ngModel)]="doctor.man">
-                                            <option value="true">Homme</option>
-                                            <option value="false">Femme</option>
-                                          </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Spécialité</label>
-                                            <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer spécialité docteur" name="spec" [(ngModel)]="doctor.spec">
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">City</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enterer city docteur" name="city" [(ngModel)]="doctor.adress.city">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Street</label>
-                                            <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer street docteur" name="street" [(ngModel)]="doctor.adress.street">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">zip code</label>
-                                            <input type="input" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer zip docteur" name="zip" [(ngModel)]="doctor.adress.zip">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Email</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Entrer email docteur" name="email" [(ngModel)]="doctor.id_user.email">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputPassword1">Mot de passe</label>
-                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" [(ngModel)]="doctor.id_user.password">
-                                        </div>
-                                        <div class="form-group">
-                                          <label for="secretaire">Selectionner secretaire:</label>
-                                          <select name="secretaire" id="sexe" class="form-control" ngModel>
-                                            <option value="none" selected>test1</option>
-                                            <option value="false">test2</option>
-                                          </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputPassword1">Bio</label>
-                                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="bio" [(ngModel)]="doctor.bio"></textarea>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="submit" class="btn btn-success">Modifier</button>
-                            </div>
-                        </form>
-                    </ng-template>
-                </div>
-            </div>
-        </div> -->
-        <!-- End Modal Add Doctor -->
-        <!-- Doctors not found -->
         <div *ngIf="!( ad | filter:searchDoctor)?.length && !emptyBool">
             <div id="notfound">
                 <div class="notfound">
