--- a/frontend/src/app/doctor/layout/layout.component.html
+++ b/frontend/src/app/doctor/layout/layout.component.html
@@ -7,6 +7,7 @@
             <a routerLink="/doctor/consultations" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-check-square-o" aria-hidden="true"></i>&nbsp; Mes consultations</a>
             <a routerLink="/doctor/archivedcons" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-archive" aria-hidden="true"></i>&nbsp; Mes consultations archivées</a>
             <a routerLink="/doctor/messages" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp; Mes messages</a>
+            <a routerLink="/doctor/caisse" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-money" aria-hidden="true"></i>&nbsp; Caisse</a>
         </div>
     </div>
     <!-- /#sidebar-wrapper -->
