--- a/frontend/src/app/doctor/caisse/caisse.component.html
+++ b/frontend/src/app/doctor/caisse/caisse.component.html
@@ -1,1 +1,4 @@
-<p>caisse works!</p>
+<form #f5="ngForm" (ngSubmit)="getCaissePerdate(id_doc,f5)">
+    <input type="date" name="date" class="form-input">
+    <button type="submit">check</button>
+</form>
