Fix Search date in range

--- a/frontend/src/app/doctor/caisse/caisse.component.html
+++ b/frontend/src/app/doctor/caisse/caisse.component.html
@@ -1,4 +1,4 @@
 <form #f5="ngForm" (ngSubmit)="getCaissePerdate(id_doc,f5)">
-    <input type="date" name="date" class="form-input">
+    <input type="date" name="date" class="form-input" ngModel>
     <button type="submit">check</button>
 </form>
