--- a/frontend/src/app/doctor/caisse/caisse.component.html
+++ b/frontend/src/app/doctor/caisse/caisse.component.html
@@ -1,4 +1,15 @@
+<div class="container mt-3">
 <form #f5="ngForm" (ngSubmit)="getCaissePerdate(id_doc,f5)">
-    <input type="date" name="date" class="form-input" ngModel>
-    <button type="submit">check</button>
+    <div class="form-row ">
+    <div class="form-group col-6">
+        <label for="">Date Début</label>
+        <input type="date" class="form-control" id="" aria-describedby="emailHelp" name="dateD" ngModel>
+      </div>
+      <div class="form-group col-6">
+        <label for="">Date Fin</label>
+        <input type="date" class="form-control" id="" aria-describedby="emailHelp" name="dateF" ngModel>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-outline-dark btn-block">check</button>
 </form>
+</div>
