--- a/frontend/src/app/doctor/caisse/caisse.component.html
+++ b/frontend/src/app/doctor/caisse/caisse.component.html
@@ -1,4 +1,5 @@
-<div class="container mt-3">
+<div class="container">
+<div class="jumbotron pt-3 mt-3">
 <form #f5="ngForm" (ngSubmit)="getCaissePerdate(id_doc,f5)">
     <div class="form-row ">
     <div class="form-group col-6">
@@ -10,6 +11,7 @@
         <input type="date" class="form-control" id="" aria-describedby="emailHelp" name="dateF" ngModel>
       </div>
     </div>
-    <button type="submit" class="btn btn-outline-dark btn-block">check</button>
+    <button type="submit" class="btn btn-dark pull-right">Chercher par date</button>
 </form>
+</div>
 </div>
