--- a/frontend/src/app/doctor/caisse/caisse.component.html
+++ b/frontend/src/app/doctor/caisse/caisse.component.html
@@ -5,10 +5,10 @@
       <div class="card-text">
         <div class="row">
           <div class="col-md-6">
-            {{CountAllconsultations}} consultations.
+            Vous avez <b>{{CountAllconsultations}} consultations.</b>
           </div>
           <div class="col-md-6">
-            {{sommeT}}
+            <b>Totale :</b>{{sommeT}} Dinars
           </div>
         </div>
       </div>
