add lisiting appois

--- a/frontend/src/app/doctor/layout/layout.component.html
+++ b/frontend/src/app/doctor/layout/layout.component.html
@@ -4,6 +4,7 @@
         <div class="sidebar-heading">ESPACE DOCTEUR</div>
         <div class="list-group list-group-flush">
             <a routerLink="/doctor/secretaries" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-users" aria-hidden="true"></i>&nbsp; Liste des sécretaires</a>
+            <a routerLink="/doctor/appointments" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-user-md" aria-hidden="true"></i>&nbsp; Mes rendez-vous</a>
             <a routerLink="/doctor/consultations" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-check-square-o" aria-hidden="true"></i>&nbsp; Mes consultations</a>
             <a routerLink="/doctor/archivedcons" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-archive" aria-hidden="true"></i>&nbsp; Mes consultations archivées</a>
             <a routerLink="/doctor/messages" class="list-group-item list-group-item-action bg-dark"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp; Mes messages</a>
