--- a/frontend/src/app/doctor/secretaries/secretaries.component.html
+++ b/frontend/src/app/doctor/secretaries/secretaries.component.html
@@ -100,5 +100,10 @@
             <h1 class="display-4 ">Il n' y a pas de sécretaires à embaucher pour le moments . . .</h1>
         </div>
     </div>
+    <div class="jumbotron jumbotron-fluid mt-2" *ngIf="!( secretaries | filter:searchSecretary)?.length && !emptyBool">
+        <div class=" container ">
+            <h1 class="display-4 ">Pas de secretaires suite à votre recherche . . . </h1>
+        </div>
+    </div>
     <!-- End List all Secretaries -->
 </div>
