--- a/frontend/src/app/admin/claims/claims.component.html
+++ b/frontend/src/app/admin/claims/claims.component.html
@@ -1,6 +1,7 @@
 <div class="container mt-2">
     <div class="search-hero">
-        <input class="form-control" type="text" name="search" [(ngModel)]="searchClaim" autocomplete="off" placeholder="Chercher une réclamation . . .">
+        <input class="form-control" type="text" name="search" [(ngModel)]="searchClaim" autocomplete="off"
+            placeholder="Chercher une réclamation . . .">
     </div>
     <!-- List all claims -->
 
@@ -8,13 +9,30 @@
         <div class="col-md-12 col-sm-12 item" *ngFor="let claim of claims | filter:searchClaim">
             <div class="card mb-3" [ngClass]="(claim.answer == '')?'border-danger':'border-success'">
                 <div class="card-header">
-                    <b [ngClass]="(claim.answer == '')?'text-danger':'text-success'">Réclamation de : </b> 
+                    <b [ngClass]="(claim.answer == '')?'text-danger':'text-success'">Réclamation de : </b>
                     <span>{{claim.id_patient.nom | uppercase}} {{claim.id_patient.prenom | uppercase}}</span>
-                    <button type="button" class="btn btn-labeled float-right" [ngClass]="(claim.answer == '')?'btn-outline-danger':'btn-outline-success'"
-                    (click)='deleteClaim(claim._id)'>
-                    <span class="btn-label"><i class="fa fa-trash-o"></i></span></button>
+                    <button type="button" class="btn btn-labeled float-right"
+                        [ngClass]="(claim.answer == '')?'btn-outline-danger':'btn-outline-success'"
+                        data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
+                        aria-controls="collapseExample">
+                        <span class="btn-label"><i class="fa fa-trash-o"></i></span></button>
                 </div>
                 <div class="card-body">
+
+                    <div class="collapse mt-3" id="collapseExample">
+                        <div class="card card-body text-center">
+                            <h3>
+                                Voulez-vous vraiment supprimer cette réclamation ??
+                            </h3>
+                            <hr>
+                            <div class="row">
+                                <div class="col-3">
+                                    <button type="button" (click)='deleteClaim(claim._id)'
+                                        class="col btn btn-block btn-outline-danger">Supprimer</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <b class="card-title">Objet du réclamation :</b>
                     <p>{{claim.objectif}}</p>
                     <b class="card-title">Contenue du réclamation:</b>
