--- a/frontend/src/app/secretary/accepted-rv/accepted-rv.component.html
+++ b/frontend/src/app/secretary/accepted-rv/accepted-rv.component.html
@@ -29,4 +29,7 @@
             </div>
         </div>
     </div>
+    <div class="alert alert-warning text-center" role="alert" *ngIf='count_accepted == 0'>
+        Vous n'avez pas de rendez-vous accéptée pour le moment ...
+    </div>
 </div>
