--- a/frontend/src/app/secretary/canceled-rv/canceled-rv.component.html
+++ b/frontend/src/app/secretary/canceled-rv/canceled-rv.component.html
@@ -27,4 +27,7 @@
             </div>
         </div>
     </div>
+    <div class="alert alert-warning text-center" role="alert" *ngIf='count_cancelled == 0'>
+        Vous n'avez pas de rendez-vous annulé pour le moment ...
+    </div>
 </div>
