fix accept doctors

--- a/frontend/src/app/admin/doctors/doctors.component.html
+++ b/frontend/src/app/admin/doctors/doctors.component.html
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                         <div class="modal-footer" style="flex-direction: column;">
-                            <button type="button" class="btn btn-success btn-block" (click)='accept(doctor._id)'
+                            <button type="button" class="btn btn-success btn-block" (click)='accept(mydoctor._id)'
                                 data-dismiss="modal" *ngIf='!mydoctor.accepted'>Accepter</button>
                             <button type="button" class="btn btn-outline-danger btn-block" data-toggle="collapse"
                                 data-target="#collapseExample" aria-expanded="false"
